@@ -9,18 +9,16 @@
 
 ## 2. 技术栈
 - **JDK baseline**：24
-- **依赖分析**：`jdeps` 内部 API（`DepsAnalyzer`, `JdepsConfiguration`, `JdepsFilter`, `JdepsWriter`），粒度：类级别。
-- **字节码解析**：JDK 24 Class-File API（预览，需 `--enable-preview`）。
+- **依赖分析**：`jdeps` 内部 API（`DepsAnalyzer`），粒度：类级别。
 - **CLI**：Picocli
-- **并发**：虚拟线程
 
 ---
 
 ## 3. 项目结构
 - **core**：核心 API
-    - 依赖分析：封装 `DepsAnalyzer` → `DependencyGraph`
-    - 类级可达性：基于 Class-File API
-    - Shrink：生成并执行裁剪计划
+    - `DependencyGraph`：对 jdeps `Graph<DepsAnalyzer.Node>` 的简单封装
+    - `JdepsAnalyzer`：直接封装 `DepsAnalyzer`
+    - `JarShrinker`：JAR 文件收缩执行器
 - **cli**：用户接口
     - 子命令：`analyze`、`shrink`
     - 参数解析与调用 core
@@ -30,61 +28,63 @@
 ## 4. CLI 规范
 ### analyze
 ```
-jarinker analyze -c PATH [-c PATH ...] SOURCES...
+jarinker analyze -cp PATH [-cp PATH ...] [OPTIONS] SOURCES...
 ```
-- `-c, --cp`：classpath 条目（必填，可多次）
+- `-cp, -classpath, --class-path`：classpath 条目（必填，可多次）
 - `SOURCES...`：根产物（必填，classes 目录或 JAR）
+
+#### 过滤选项
+- `--filter-pattern <pattern>`：过滤匹配给定模式的依赖关系
+- `--regex <pattern>`：查找匹配给定模式的依赖关系
+- `--filter-same-package`：过滤同一包内的依赖关系（默认：true）
+- `--filter-same-archive`：过滤同一归档内的依赖关系（默认：true）
+- `--find-jdk-internals`：查找对 JDK 内部 API 的类级依赖关系（默认：false）
+- `--find-missing-deps`：查找缺失的依赖关系（默认：false）
+
+#### 源过滤选项
+- `--include-pattern <pattern>`：限制分析匹配模式的类
+- `--requires <module>`：查找匹配给定模块名的依赖关系（可多次指定）
+- `--target-packages <package>`：查找匹配给定包名的依赖关系（可多次指定）
 
 ### shrink
 ```
-jarinker shrink -c PATH [-c PATH ...] [-o PATH | --in-place] SOURCES...
+jarinker shrink -cp PATH [-cp PATH ...] [-o PATH] SOURCES...
 ```
-- `-c, --cp`：classpath 条目（必填）
+- `-cp, -classpath, --class-path`：classpath 条目（必填）
 - `SOURCES...`：根产物（必填）
-- `-o, --output`：输出目录（非原地）
-- `--in-place`：原地收缩（默认 true，`-o` 优先生效）
-
-退出码：`0` 成功，`2` 参数错误，`3` 分析失败，`4` 收缩失败。
+- `-o, --output`：输出目录（选填），如果未指定，则原地修改
 
 ---
 
 ## 5. 依赖分析
-- **倒排索引**：遍历 cp，建立 `FQCN -> ArtifactId`，支持 Multi-Release JAR。
-- **依赖图**：`DepsAnalyzer` 构建类依赖，映射为工件依赖；过滤 JDK 包。
-- **递归**：从 sources 出发，BFS 递归追踪依赖工件。
+- **直接使用 jdeps**：`JdepsAnalyzer` 直接封装 jdeps 的 `DepsAnalyzer`
+- **返回 jdeps 图**：直接返回 `Graph<DepsAnalyzer.Node>`，无需自定义数据模型
 
 示例：
 ```java
-DepsAnalyzer depsAnalyzer = new DepsAnalyzer(
-    new JdepsConfiguration.Builder().build(),
-    new JdepsFilter.Builder().build(),
-    JdepsWriter.newSimpleWriter(new PrintWriter(System.out), Analyzer.Type.CLASS),
-    Analyzer.Type.CLASS,
-    false
-);
-Graph<DepsAnalyzer.Node> nodeGraph = depsAnalyzer.dependenceGraph();
+var analyzer = JdepsAnalyzer.builder()
+        .jdepsFilter(JdepsFilter.DEFAULT_FILTER)
+        .build();
+
+var graph = analyzer.analyze(sources, classpath);
 ```
 
 ---
 
 ## 6. Shrink
-- **工件级可达性**：图上 BFS，得到保留工件。
-- **类级可达性**：Class-File API 解析常量池、签名、继承、指令引用；忽略 JDK 类。
-- **ShrinkPlan**：按工件生成保留类/资源清单 → 输出目标路径。
-- **执行**：
-    - JAR：复制保留条目，剔除其余；默认移除签名文件。
-    - DIR：复制或打包。
-    - 原地模式：临时文件 + 原子替换。
+- **JAR 收缩**：`JarShrinker` 直接处理 JAR 文件收缩
+- **简化流程**：
+    - 分析依赖关系（jdeps）
+    - 执行 JAR 收缩
 
 ---
 
 ## 7. 数据模型
 ```java
-record ArtifactId(String value) {}
-final class Artifact { ArtifactId id; Path path; boolean multiRelease; }
-final class DependencyGraph { Set<ArtifactId> nodes; Map<ArtifactId, Set<ArtifactId>> edges; }
-record AnalyzeReport(DependencyGraph graph, Map<ArtifactId,String> idToPath) {}
-final class ShrinkPlan { Map<ArtifactId,Set<String>> keepClasses; Map<ArtifactId,Path> targetOutputs; }
+// 直接使用 jdeps 的数据模型
+Graph<DepsAnalyzer.Node> // jdeps 依赖图
+Map<String, Set<String>> // 类级可达性映射
+record ShrinkResult(int processedJars, long originalSize, long shrunkSize) // 收缩结果
 ```
 
 ---
@@ -98,12 +98,5 @@ final class ShrinkPlan { Map<ArtifactId,Set<String>> keepClasses; Map<ArtifactId
 ## 9. 验收标准
 1. `analyze` 正确输出依赖图，能识别未引用工件。
 2. `shrink` 产物可运行，体积减少，无缺失类错误。
-3. Multi-Release JAR 分析正确。
 
 ---
-
-## 10. 后续规划
-- 配置文件：入口点/白名单/资源保留。
-- 输出格式：JSON、DOT。
-- 构建集成：Gradle/Maven 插件。
-- IDE 可视化。  
